src/objects/Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>ACTION__c</fullName>
        <label>Action</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Audit Trail</relationshipLabel>
        <relationshipName>Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DATE__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FORM_ID__c</fullName>
        <label>Form ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORM__c</fullName>
        <label>Form</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMBER__c</fullName>
        <label>Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIOR_VALUE__c</fullName>
        <label>Prior Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QUESTION__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <label>Section</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUBJECT_ID__c</fullName>
        <formula>CLIENT__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME__c</fullName>
        <label>Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATED_VALUE__c</fullName>
        <label>Updated Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USER_INITIAL__c</fullName>
        <label>User Initial</label>
        <length>233</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <formula>CASE( SECTION__c , &apos;-1&apos;, &apos;Trauma&apos;, &apos;0&apos;, &apos;Baseline&apos;, &apos;Follow-up&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <label>Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ACTION__c</columns>
        <columns>CLIENT__c</columns>
        <columns>SUBJECT_ID__c</columns>
        <columns>Visit_Type__c</columns>
        <columns>FORM__c</columns>
        <columns>FORM_ID__c</columns>
        <columns>NUMBER__c</columns>
        <columns>QUESTION__c</columns>
        <columns>PRIOR_VALUE__c</columns>
        <columns>UPDATED_VALUE__c</columns>
        <columns>SECTION__c</columns>
        <columns>DATE__c</columns>
        <columns>TIME__c</columns>
        <columns>USER_ID__c</columns>
        <columns>USER_INITIAL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SUBJECT_ID__c</field>
            <operation>equals</operation>
            <value>0001-01-00150</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CBCL_Y</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ACTION__c</columns>
        <columns>DATE__c</columns>
        <columns>CLIENT__c</columns>
        <columns>SUBJECT_ID__c</columns>
        <columns>Visit_Type__c</columns>
        <columns>FORM__c</columns>
        <columns>FORM_ID__c</columns>
        <columns>NUMBER__c</columns>
        <columns>QUESTION__c</columns>
        <columns>PRIOR_VALUE__c</columns>
        <columns>UPDATED_VALUE__c</columns>
        <columns>SECTION__c</columns>
        <columns>USER_INITIAL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>2/10/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>FORM_ID__c</field>
            <operation>equals</operation>
            <value>CBCL_0_5</value>
        </filters>
        <label>CBCL Y</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Audit Trail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>